--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".controller.HomeActivity">
+    tools:context=".view.HomeActivity">
 
     <LinearLayout
         android:id="@+id/home_lyt_main"
