--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".controller.LoginActivity">
+    tools:context=".view.LoginActivity">
 
     <LinearLayout
         android:id="@+id/login_lyt_main"
